src/objects/Talent_Sourcing__c.object
<CustomObject>
    <description>Used by AECOM&apos;s Talent Acquisition team as a central repository for data on outside people we are recruiting, for the purpose of reporting to OCCP to demonstrate that we are meeting requirements.</description>
    <fields>
        <fullName>Business_Phone__c</fullName>
        <inlineHelpText>Enter office telephone number of individual being recruited</inlineHelpText>
        <label>Business Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Candidate_Notes__c</fullName>
        <inlineHelpText>Enter reportable notes here. (Enter running notes in Notes and Attachments area)</inlineHelpText>
        <label>Candidate Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Career_Level__c</fullName>
        <inlineHelpText>Select one level</inlineHelpText>
        <label>Career Level</label>
        <picklist>
            <picklistValues>
                <fullName>Individual Contributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project/Program Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Line/Geography Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cell_Phone__c</fullName>
        <inlineHelpText>Enter individual&apos;s cell number</inlineHelpText>
        <label>Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Certifications_Licenses__c</fullName>
        <inlineHelpText>Enter each certification or license on a separate line. Include states and dates where appropriate, e.g., PE, Minnesota, 1989</inlineHelpText>
        <label>Certifications/Licenses</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <inlineHelpText>Enter individual&apos;s current location</inlineHelpText>
        <label>City</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <inlineHelpText>Enter individual&apos;s current employer</inlineHelpText>
        <label>Company</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>State_Province__r.Country__r.Name</formula>
        <inlineHelpText>Country associated with selected state or province</inlineHelpText>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <inlineHelpText>Enter each degree on a separate line.
Include school, major, and year received if available</inlineHelpText>
        <label>Education</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <inlineHelpText>Enter individual&apos;s email address</inlineHelpText>
        <label>Email Address</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <inlineHelpText>Enter individual&apos;s first or given name</inlineHelpText>
        <label>First Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Category__c</fullName>
        <inlineHelpText>Select a single primary job category</inlineHelpText>
        <label>Job Category</label>
        <picklist>
            <picklistValues>
                <fullName>Administrative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Surveying</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial/Contract Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost Management/Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designer/Drafter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering – Acoustics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering – Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering – Civil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering – Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering – Electrical/Electronic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering – Engineering Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering – Environmental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering – Fire and Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering – Geology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering – Geotechnical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering – Hydropower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering – Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering – Maritime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering – Mechanical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering – Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering – Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering – Project/Program Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering – Structural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering – Surveying</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Language_Skills__c</fullName>
        <inlineHelpText>Enter each language on a separate line, including relevant skill and level if available, e.g. Bilingual French and English, fluent in spoken Spanish.</inlineHelpText>
        <label>Language Skills</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <inlineHelpText>Enter surname of individual being recruited</inlineHelpText>
        <label>Last Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <inlineHelpText>Enter current salary</inlineHelpText>
        <label>Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select state, province, or emirate where individual is currently located</inlineHelpText>
        <label>State/Province/Emirate</label>
        <referenceTo>State_Province_Emirate__c</referenceTo>
        <relationshipLabel>Talent Sourcing</relationshipLabel>
        <relationshipName>Talent_Sourcing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <inlineHelpText>Individual&apos;s current job title</inlineHelpText>
        <label>Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Talent Sourcing</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Job_Category__c</columns>
        <columns>State_Province__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Records_Created_last_Two_Weeks</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Job_Category__c</columns>
        <columns>Email_Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:14</value>
        </filters>
        <label>Records Created last Two Weeks</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TA-{00000}</displayFormat>
        <label>Tracking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Talent Sourcing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>